--- a/index.html
+++ b/index.html
@@ -98,31 +98,40 @@
                     </li>
                 </ul>
             </nav>
+
+            <nav>
                 <h5>Sobre a DNC</h5>
                 <ul>
                     <li>
                         <a href="">Histórias</a>
                     </li>
+
                     <li>
                         <a href="">Missão e Valores</a>
-                    </li><li>
+                    </li>
+
+                    <li>
                         <a href="">Trabalho Conosco</a>
                     </li>
+
                     <li>
                         <a href="">Conteúdo Gratuito</a>
                     </li>
                 </ul>
-            <nav>
+
 
             </nav>
+                
             <div class="endereco">
-                © 2022 DTC Treinamentos & Consultoria LTDA | CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61 – Vila Ema | São José dos Campos – SP | CEP 12243-030
+                © 2022 DTC Treinamentos & Consultoria LTDA 
+                CNPJ: 27.995.577/0001-37 | R. Justino Cobra, 61
+                – Vila Ema | São José dos Campos – SP | CEP 12243-030
             </div>
         </div>
 
         <div class="linha2">
             <nav>
-                <a href="">Termos de Uso</a>
+                <a href="">Termos de Uso</a> 
                 <a href="">Política de Privacidade</a>
             </nav>
         </div>
